Support HTTPS homepage URLs and deprecate the \httplink macro
- Deprecate the \httplink macro as it was too inflexible and did only support
  links to URLs using the (legacy) HTTP schema and not the new default HTTPS. Use \link.
- Change the format of the \homepage macro to support HTTPS homepage URLs.
  Note that you will need to update your \homepage calls to make it work with
  the new version.
- Switche \social URLs to HTTPS which has long been the default for all the
  sites supported by \social.

Partly mechanical edit:

```Shell
git ls-files -z "$(git rev-parse --show-toplevel)" | xargs --null -I '{}' find '{}' -type f -print0 | xargs --null sed --in-place --regexp-extended 's#\\isundefined\{\\@homepage\}#\\isundefined{\\@homepage@url}#g;s#\\httplink\{\\@homepage\}#\\link\[\\@homepage@text\]\{\\@homepage@url\}#g;'
```

Closes: https://github.com/xdanaux/moderncv/issues/6
Related patchset: https://github.com/xdanaux/moderncv/pull/40

There should be *no* reason, for people to downgrade to http links just
because moderncv only supports legacy URL schemes. Ref:
https://github.com/gshakhn/resume/commit/b8c93b97bd5c1648198536d7a8ad74e929a57871

--- a/examples/template-multibib.tex
+++ b/examples/template-multibib.tex
@@ -31,9 +31,9 @@
 \phone[fixed]{+2~(345)~678~901}
 \phone[fax]{+3~(456)~789~012}
 \email{john@doe.org}                               % optional, remove / comment the line if not wanted
-\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
+\homepage{https://www.johndoe.com}{www.johndoe.com}% optional, remove / comment the line if not wanted
 \social[linkedin]{john.doe}                        % optional, remove / comment the line if not wanted
-\social[xing]{john\_doe}                           % optional, remove / comment the line if not wanted
+\social[xing]{john\textunderscore doe}             % optional, remove / comment the line if not wanted
 \social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
 \social[github]{jdoe}                              % optional, remove / comment the line if not wanted
 \social[gitlab]{jdoe}                              % optional, remove / comment the line if not wanted
