--- a/examples/template.tex
+++ b/examples/template.tex
@@ -31,9 +31,9 @@
 \phone[fixed]{+2~(345)~678~901}
 \phone[fax]{+3~(456)~789~012}
 \email{john@doe.org}                               % optional, remove / comment the line if not wanted
-\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
+\homepage{https://www.johndoe.com}{www.johndoe.com}% optional, remove / comment the line if not wanted
 \social[linkedin]{john.doe}                        % optional, remove / comment the line if not wanted
-\social[xing]{john\_doe}                           % optional, remove / comment the line if not wanted
+\social[xing]{john\textunderscore doe}             % optional, remove / comment the line if not wanted
 \social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
 \social[github]{jdoe}                              % optional, remove / comment the line if not wanted
 \social[gitlab]{jdoe}                              % optional, remove / comment the line if not wanted
