--- a/moderncviconsawesome.sty
+++ b/moderncviconsawesome.sty
@@ -39,6 +39,7 @@
 \renewcommand*{\githubsocialsymbol}  {{\small\faGithub}~}             % alternative: \faGithubSquare, \faGithubSquare
 \renewcommand*{\gitlabsocialsymbol}  {{\small\faGitlab}~}
 \renewcommand*{\skypesocialsymbol}   {{\small\faSkype}~}
+\renewcommand*{\stackoverflowsocialsymbol} {{\small\faStackOverflow}~}
 
 
 \endinput
